# AWCC

./: .aider.chat.history.md  .aider.input.history  .clang-tidy  .gitignore  .pre-commit-config.yml  CHANGELOG.md  CMakeLists.txt  Hacking.md  Hacking_LIGHT.md  LICENSE  Makefile  README.md  Refrence.md  awccd  awccd.c  database.json  flake.nix  install.sh  main.c  release-please-config.json
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflow/: release.yml
.github/workflows/: build.yml  lock.yml  release.yml
app/: 70-awcc.rules  awcc.desktop  awccd.initd  awccd.service
autoboost/: .gitignore  Makefile  README.md  awcc_autoboost.conf  awcc_autoboost.service  awcc_autoboost.sh
autoboost/deprecated/: awcc_autoboost.conf  awcc_autoboost.sh
autoboost/include/: AWCC.h  AWCCAutoBoost.h  AWCCConfig.h  AWCCControl.h  AWCCLogger.h  AWCCSystemLogger.h  AWCCValueChecker.h
autoboost/src/: AWCC.c  AWCCACPI.c  AWCCACPI.h  AWCCAutoBoost.c  AWCCConfig.c  AWCCControl.c  AWCCSystemLogger.c  AWCCSysteminfo.c  AWCCUtils.c  AWCCUtils.h  awcc_autoboost.c  main.c
include/: AWCC.c  AWCC.h  AWCCACPI.c  AWCCAutoBoost.c  AWCCConfig.c  AWCCConfig.h  AWCCDaemon.c  AWCCDaemon.h  AWCCRemote.c  AWCCRemote.h  AWCCSystemLogger.c  AWCCUtils.c  AWCCUtils.h  AWCCValueChecker.c  AWCCValueChecker.h  AcpiUtils.h  Daemon.h  EffectController.h  Gui.h  KeyBinder.h  LightFX.h  Renderui.h  Resources.hpp  Thermals.h  database.h  effects.c  effects.h  fans.c  fans.h  helper.h  lighting_controls.c  lighting_controls.h  lights.c  lights.h  resource.h  supported_devices.c  supported_devices.h  thermal_modes.c  thermal_modes.h
nix/: module.nix  package.nix
scripts/: main.py
src/: AWCC.c  AWCCACPI.c  AWCCDaemon.c  AWCCRemote.c  AWCCUtils.c  AWCCValueChecker.c  AcpiUtils.cpp  Daemon.cpp  EffectController.cpp  KeyBinder.cpp  LightFX.cpp  Thermals.cpp  helper.cpp  lighting_controls.c  main.cpp  supported_devices.c  thermal_modes.c
src/gui/: Gui.cpp  Render.cpp
systemd/: awcc_autoboost.service  awccd.service
